Change description, add get in touch

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="/css/ie8.css" /><![endif]-->
 
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link rel="icon" type="image/png" href="/images/dtu_icon.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/images/dtu_icon.png">
 
     {% seo %}
     {% feed_meta %}
@@ -25,10 +25,11 @@
 
 	<body id="top">
     <header id="header">
-      <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/avatar.jpg" alt="{{ site.author.name }}"></a>
-      <h1 class="editable"><strong>I am <a href="/">Strata Reloaded</a></strong>, a super simple<br>
-      responsive site template freebie<br>
-      adapted by <a href="http://comfusionllc.com">Comfusion LLC</a>.</h1>
+      <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/cogsys_logo.png" alt="CogSys logo"></a>
+      <h1 class="editable"><strong> CogSys Machine Learning Talks </strong> </h1>
+      <h4 class="editable"> Talks on machine learning <br/> given by internal and external speakers.  </h4>
+      <h5 class="editable" style="color:lightgrey;" > Open to everyone.  </h5>
+
     </header>
 
     {{ content }}
