--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,9 @@
 	<body id="top">
     <header id="header">
       <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/cogsys_logo.png" alt="CogSys logo"></a>
-      <h1 class="editable"><strong> CogSys Machine Learning Talks </strong> </h1>
-      <h4 class="editable"> Talks on machine learning <br/> given by internal and external speakers.  </h4>
-      <h5 class="editable" style="color:lightgrey;" > Open to everyone.  </h5>
+      <h1 class="editable"><strong> CogSys  Talks </strong> </h1>
+      <h4 class="editable"> Seminar series in machine learning <br />  and applied mathematics </h4>
+      <h5 class="editable" style="color:lightgrey;" > Open to everyone  </h5>
 
     </header>
 
@@ -52,11 +52,11 @@
         </li>
         {% endif %}
       </ul>
-      <ul class="copyright">
+      <!-- <ul class="copyright">
           <li>&copy; Untitled</li>
           <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           <li>Theme: <a href="http://comfusionllc.com">Comfusion LLC</a></li>
-      </ul>
+      </ul> -->
     </footer>
 
 		<script src="/js/jquery.min.js"></script>
