--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
       <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/cogsys_logo.png" alt="CogSys logo"></a>
       <h1 class="editable"><strong> CogSys  Talks </strong> </h1>
       <h4 class="editable"> Seminar series in machine learning <br />  and applied mathematics </h4>
-      <h5 class="editable" style="color:lightgrey;" > Open to everyone  </h5>
+      <!-- <h5 class="editable" style="color:lightgrey;" > Open to everyone  </h5> -->
 
     </header>
 
